[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crispr-toolkit"
version = "0.1.0"
description = "A pure-Python utility library for CRISPR and prime editing sequence design and validation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "OmnisCoder" }
]
keywords = ["crispr", "genome-editing", "prime-editing", "bioinformatics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/omniscoder/crispr-toolkit"
Repository = "https://github.com/omniscoder/crispr-toolkit"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

